# batchr

./: .envrc  .gitignore  Cargo.toml  flake.nix
nix/batchr/: packages.nix
nix/core/: rust.nix  shells.nix
src/: main.rs  parse.rs
