[package]
name = "batchr"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1"
# futures = "0.3"
# nom = "8.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# surrealdb = { version = "2.3.6" }
# tokio = { version = "1", features = ["full"] }
# tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indicatif = "0.17"
