[package]
name = "batchr"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
indicatif = "0.17"
